Fix comparison on mobile

--- a/assets/styles/_autovia-buy-box.scss
+++ b/assets/styles/_autovia-buy-box.scss
@@ -78,4 +78,8 @@
             justify-self: start;
         }
     }
+
+    @media only screen and (max-width: $app-mobile-width) {
+        grid-template-columns: 1fr;
+    }
 }
